--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </style>
 </head>
 <body>
+    <iframe data-aa='2274976' src='//ad.a-ads.com/2274976?size=728x90' style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
 <div class="container">
     <label for="inputField">Введите текст:</label>
     <textarea id="inputField"></textarea>
