--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     <label for="outputField">Результат:</label>
     <textarea id="outputField" readonly></textarea>
 </div>
+
+
+
+<iframe data-aa='2282304' src='//ad.a-ads.com/2282304?size=970x250' style='width:970px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
+
 <script>
     const inputField = document.getElementById('inputField');
     const outputField = document.getElementById('outputField');
