--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ alt=""/></a><script>(function(d,s){d.getElementById("licnt1CAD").src=
 (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
 ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
 (document,screen)</script><!--/LiveInternet-->
+<script src="//static.surfe.pro/js/net.js"></script>
+<ins class="surfe-be" data-sid="390382"></ins>
+<script>(adsurfebe = window.adsurfebe || []).push({});</script>
 
 </body>
 </html>
